# topaz

./: .gitignore  .gitmodules  Makefile  README  TODO  explore.xlsx  init_topaz.sh  install-mpi.sh  run_as_root.sh  summary.ods  update_topaz.sh
analysis/: data.gnumeric
benchmarks/: .gitignore  Makefile  build_summary.py  results.gnumeric  results.tex  while_gone.sh
benchmarks/bodytrack/src/: Makefile  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.template  gen_configure.sh  libtool
benchmarks/bodytrack/src/FlexImageLib/: BinaryImage.h  FlexImage.cpp  FlexImage.h  FlexImageStore.h  Makefile
benchmarks/bodytrack/src/FlexImageLib/.deps/: FlexIO.Plo  FlexImage.Plo
benchmarks/bodytrack/src/TrackingBenchmark/: AnnealingFactor.cpp  BodyGeometry.cpp  BodyGeometry.h  BodyPose.cpp  BodyPose.h  CalcWeights.cpp  CameraModel.cpp  CameraModel.h  CovarianceMatrix.cpp  DMatrix.h  ImageMeasurements.cpp  ImageMeasurements.h  ImageProjection.cpp  ImageProjection.h  Makefile  Makefile.am  ParticleFilter.h  RandomGenerator.cpp  SmallVectors.h  TrackingModel.cpp  TrackingModel.h  Vector3.h  main.batch2.tpz  main.batch5.tpz  main.cpp  main.nobatch.tpz  main.tpz  main_full.tpz  main_ref.cpp
docs/: abstract.2.txt  abstract.txt  component_out_det  data.OOPSLA.2014.tex  offsite-pres-2.pptx  offsite-pres.pptx  opt-overview.aux  opt-overview.tex
emul/: Makefile  README
include/: Makefile  abs_detectors.h  bulletin.h  checker.h  ctrl_system.h  detector.h  detectors.h  dist_detector.h  logger.h  machine.h  relax_lib.h  scar_detector.h  stats.h  (+5 more)
(+941 files in other folders)
